--- a/week1/D1/index.html
+++ b/week1/D1/index.html
@@ -5,7 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div>salam</div>
+    <header>
+        <nav>
+    <h1>Xeber Sayti</h1>
+    <ul>
+        <li><a href="">Sehife</a></li>
+        <li><a href="">Xeberler</a></li>
+        <li><a href="">Elaqe</a></li>
+          <ul>
+          </nav>
+          <strong>Baki kitablar sergisi kecirilib</strong>
+
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti accusamus aliquid impedit eligendi officiis minima, nihil doloribus neque error voluptas animi, dignissimos quae ea, voluptates eum at quaerat explicabo tenetur!   </p>
+<img src="./download.jfif" alt="">
+<h3>sergide kitabalrin siyahisi</h3>
+<p>en yxsi kitablar</p>
+<table border="1px">
+    <thead>
+    <tr>
+      <th><A></A></th>
+      <th>Co</th>
+      <th><img src="./download.jfif" alt="" style="height: 100px; width: 100px;"></th>
+      <th><img src="./download.jfif" alt="" style="height: 100px; width: 100px;"></th>
+    </tr>
+</thead>
+    <tr>
+      <td>Alfre</td>
+      <td>M</td>
+      <td>Ge</td>
+      <td>shshshh</td>
+    </tr>
+    <tr>
+      <td>Centro</td>
+      <td>Frang</td>
+      <td>Mo</td>
+      <td>shshshj</td>
+    </tr>
+    <tr>
+        <td>Centro</td>
+        <td>Frang</td>
+        <td>Mo</td>
+        <td>hsh</td>
+      </tr>
+  </table>
+<h1>Xeberler categor</h1>
+<nav>
+    <ul>
+        <li><a href="">Sehife</a></li>
+        <li><a href="">Xeberler</a></li>
+        <li><a href="">Elaqe</a></li>
+        <li><a href="">Elaqe</a></li>
+          <ul>
+          </nav>
+          <footer> @2023</footer>
+          
+</header>
 </body>
 </html>
