--- a/week1/D1/task4.html
+++ b/week1/D1/task4.html
@@ -6,5 +6,34 @@
     <title>Document</title>
 </head>
 <body>
+   
+    <form action=""></form>
+    <h1>Register</h1>
+    <label for="">adiniz<input type="text"></label>
+    <label for=""></label>soyadiniz <input type="text"></label>
+  
+    <h4>Cinsiyyet</h4>
+    <input type="checkbox" name="12" id="12">kisi
+    <input type="checkbox" name="23" id="23">qadin
+    <div>dogum tarixiniz <input type="date" name="22" id="22"></div>
+    yasinizi qeyd edin<input type="text">
+    <P>HANSI dilleri biirsz?</P>
+    <input type="checkbox" name="" id="">ingilis dili
+    <input type="checkbox" name="" id="">ingilis dili
+    <input type="checkbox" name="" id="">ingilis dili
+    
+        <label for="cars">muraciet etdiyiniz saheni secin </label>
+        <select name="ca" id="cars">
+          <option value="vol">back</option>
+          <option value="sab">front</option>
+          
+        </select>
+        <div>sekillerinizi elave edin <button>choose\\\\\</button>file</div>
+        sizinle meet olunmasi olan saat <input type="time" name="" id="">
+        <div><label for="">sevdiyiniz reng ?</label></div>
+        <div>ozun haqqinda melumat yaz.</div>
+        <div style="height: 200px;width: 200px; border: 1px solid"></div>
+        <button>reset</button>
+        <button>gonder</button>
 </body>
 </html>
